--- a/ReseacherSplash/MainWindow.xaml
+++ b/ReseacherSplash/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<controls:MetroWindow x:Class="ReseacherSplash.MainWindow"
+﻿<controls:MetroWindow x:Class="Reseacher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ReseacherSplash"
+        xmlns:local="clr-namespace:Reseacher"
         xmlns:chrome="http://schemes.grabacr.net/winfx/2014/chrome"
 		xmlns:controls="http://schemes.grabacr.net/winfx/2014/controls"
         mc:Ignorable="d"
