--- a/ReseacherSplash/View/LogoDrawer.xaml
+++ b/ReseacherSplash/View/LogoDrawer.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d">
     <Grid>
-        <MediaElement x:Name="myGif" Source="Resources/loading.gif" LoadedBehavior="Play" UnloadedBehavior="Manual" MediaEnded="MyGif_MediaEnded" Stretch="Fill"/>
-        <Label x:Name="label" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Yu Gothic UI Semibold" FontSize="18" Content="Reseacher">
+        <MediaElement x:Name="myGif" Source="Resources/loading.gif" LoadedBehavior="Play" UnloadedBehavior="Manual" MediaEnded="MyGif_MediaEnded" Stretch="Fill" Margin="0,0,0,25"/>
+        <Label x:Name="label" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Yu Gothic UI Semibold" FontSize="18" Content="Reseacher" Margin="0,0,0,25">
             <Label.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <LinearGradientBrush EndPoint="0.5,0" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
                     <GradientStop Color="#FF469AFF" Offset="1"/>
                     <GradientStop Color="#FF3BFFDB"/>
