--- a/ReseacherSplash/MainWindow.xaml
+++ b/ReseacherSplash/MainWindow.xaml
@@ -34,7 +34,7 @@
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
 
-        <local:LogoDrawer x:Name="drawer" Grid.Row="1" Grid.Column="1" MediaEnded="LogoDrawer_MediaEnded"/>
+        <local:Title x:Name="drawer" Grid.Row="1" Grid.Column="1" MediaEnded="LogoDrawer_MediaEnded"/>
         <local:DatabaseState x:Name="state" Grid.Row="1" Grid.Column="0" />
         <Grid Grid.Row="2" Grid.ColumnSpan="3" Background="Purple"/>
         <Label x:Name="label_per" 
